fe cleanup
