# IP-Frontend/src/api/models/alerta-dto.ts
@@ -2,7 +2,6 @@
 /* eslint-disable */
 export interface AlertaDto {
   idLimitParam?: null | Array<string>;
-  idPacient?: null | string;
   is_active?: boolean;
   mesaj?: null | string;
   time_stamp?: string;
