# IP-Frontend/src/api/models/alerta.ts
@@ -3,7 +3,6 @@
 export interface Alerta {
   id?: null | string;
   idLimitParam?: null | Array<string>;
-  idPacient?: null | string;
   is_active?: boolean;
   mesaj?: null | string;
   time_stamp?: string;
