# IP-Frontend/src/api/models/date-vitale-dto.ts
@@ -2,7 +2,6 @@
 /* eslint-disable */
 export interface DateVitaleDto {
   ecg?: number;
-  idPacient?: null | string;
   puls?: number;
   temperatura?: number;
   time_stamp?: string;
