# IP-Frontend/src/api/models/date-vitale.ts
@@ -3,7 +3,6 @@
 export interface DateVitale {
   ecg?: number;
   id?: null | string;
-  idPacient?: null | string;
   puls?: number;
   temperatura?: number;
   time_stamp?: string;
