# IP-Frontend/src/api/models/limit-param-dto.ts
@@ -2,6 +2,5 @@
 /* eslint-disable */
 export interface LimitParamDto {
   bpmLimit?: number;
-  idAlerta?: null | string;
   tempLimit?: number;
 }
