# IP-Frontend/src/api/models/limit-param.ts
@@ -3,6 +3,5 @@
 export interface LimitParam {
   bpmLimit?: number;
   id?: null | string;
-  idAlerta?: null | string;
   tempLimit?: number;
 }
