# IP-Frontend/src/api/models/recomandare-dto.ts
@@ -2,7 +2,6 @@
 /* eslint-disable */
 export interface RecomandareDto {
   end?: string;
-  idPacient?: null | string;
   mesaj?: null | string;
   start?: string;
 }
