# IP-Frontend/src/api/models/recomandare.ts
@@ -3,7 +3,6 @@
 export interface Recomandare {
   end?: string;
   id?: null | string;
-  idPacient?: null | string;
   mesaj?: null | string;
   start?: string;
 }
